# pico-hid-bridge

./: .gitignore  README.md
docs/: build-windows.md  first-build-goal.md  pico-sdk-plan.md  pre-build-checklist.md  quickstart.md
firmware/: code.py  settings.toml.example
firmware-c/: CMakeLists.txt  pico_sdk_import.cmake
firmware-c/src/: config.h.example  main.c  tusb_config.h  usb_descriptors.c
notes/: architecture.md
protocol/: commands-v1.md
